# preflight

./: .coverage  .gitattributes  .gitignore  .preflight.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  test-action.yml
preflight/: __init__.py  cli.py  config.py  registry.py  reporter.py  runner.py
preflight/checks/: __init__.py  data.py  model.py  resources.py  splits.py
tests/: conftest.py  test_data.py  test_model.py  test_resources.py  test_splits.py
