[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preflight-ml"
version = "0.1.0"
description = "Pre-flight checks for PyTorch pipelines. Catch silent failures before they waste your GPU."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rusheel Sharma" }]
requires-python = ">=3.9"
keywords = ["pytorch", "machine-learning", "deep-learning", "data-validation", "mlops", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9",
    "click>=8.0",
    "rich>=12.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
preflight = "preflight.cli:main"

[project.urls]
Homepage = "https://github.com/Rusheel86/preflight"
Repository = "https://github.com/Rusheel86/preflight"
Issues = "https://github.com/Rusheel86/preflight/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
exclude = ["venv/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=preflight --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*"]
